<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">
	
    <TextView 
        android:id="@+id/appName"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="center_horizontal"
   		android:layout_centerHorizontal="true"/>
    <!-- -->
    <LinearLayout
        android:id="@+id/lybtn"
        android:layout_marginTop="30dp"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:orientation="vertical"
	    android:layout_gravity="center"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/appName">
	    <Button 
	        android:id="@+id/btnStartGame"
	        android:text="@string/startGame"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	        style="@style/MMLineActionButton"
	    	
	    	android:width="128dp"/>
		
		<Button 
	        android:id="@+id/btnRankList"
	        android:text="@string/rankList"
	        android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		        style="@style/MMLineActionButton"
	   		
	    	android:width="128dp"/>
		
		<Spinner 
		    android:id="@+id/spiGameModel"
		    android:prompt="@string/gameModel"
		  	android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"/>
	</LinearLayout>
	<TextView 
        android:text="@string/appInfo"
        android:layout_marginTop="40dp"
        android:layout_below="@id/lybtn"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="center_horizontal"
   		android:textSize="25sp"
   		android:layout_centerHorizontal="true"/>
</RelativeLayout>