<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="5dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"    
    android:orientation="vertical"
    android:background="#FFFFFF">
		<!--
	<LinearLayout 
   		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:weightSum="4">
		<ImageView 
		    android:id="@+id/firstCard"
		    android:src="@drawable/card_back"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
		<ImageView 
		    android:id="@+id/secondCard"
		    android:src="@drawable/card_back"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
		<ImageView 
		    android:id="@+id/thirdCard"
		    android:src="@drawable/card_back"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
		<ImageView 
		    android:id="@+id/fourCard"
		    android:src="@drawable/card_back"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
	</LinearLayout>
  -->
	<LinearLayout
	    android:id="@+id/ly1"
	    android:gravity="center_horizontal"
	    android:layout_width="fill_parent"
   		android:layout_height="wrap_content"	    
        android:layout_centerHorizontal="true"       
        android:orientation="vertical">
	    <!-- 显示产生的随机数 
	    <TextView
	        android:visibility="gone"
	        android:id="@+id/randomNums"
	        android:textSize="30sp"
	        android:text="6 6 6 6"
	        android:gravity="center"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
		-->
	    <!-- 输入框 -->
	    <EditText 
	        android:id="@+id/inputExp"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout 
   		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="4">        
	    <!-- 第一个随机数 -->
	   	<Button 
	        android:id="@+id/btnFirstNum"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
	    
	   	<!-- 第二个随机数 -->
	   	<Button
	        android:id="@+id/btnSecondNum"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
	
	 		<!-- 第三个随机数 -->
	   	<Button
	        android:id="@+id/btnThirdNum"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
	   	
	   	<!-- 第四个随机数 -->
	   	<Button
	        android:id="@+id/btnFourNum"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight="1"/>
	   	
	   
	 </LinearLayout>
     
     <LinearLayout 
   		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="4">
	   	<!-- 运算符+ -->
	   	<Button 
	        android:id="@+id/btnAdd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="+"
	 		android:layout_weight="1"/>
	   	
     	<!-- 运算符- -->
	   	<Button 
	        android:id="@+id/btnSubtract"
	        android:layout_width="wrap_content"	        
	        android:layout_height="wrap_content"
	        android:text="-"
	        android:layout_weight="1"/>
	   
	   	<!-- 运算符x -->
	   	<Button 
	        android:id="@+id/btnMultiply"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="*"
	        android:layout_weight="1"/>
       
	   	<!-- 运算符/ -->
	   	<Button 
	        android:id="@+id/btnDivide"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="/"
	        android:layout_weight="1"/>
    
	      
      </LinearLayout>
      <LinearLayout 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="4">
        <!-- 运算符( -->
	   	<Button 
	        android:id="@+id/btnLeftBracket"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="("
	        android:layout_weight="1"/>
	   
	   	<!-- 运算符)-->
	   	<Button 
	        android:id="@+id/btnRightBracket"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=")"
	        android:layout_weight="1"/>
           <!-- 确定 -->
	    <Button 
	        android:id="@+id/btnSubmit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnSubmit"
	        android:layout_weight="1"/>
	    
	    <!-- 清空 -->
	    <Button 
	        android:id="@+id/btnClear"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnClear"	        
	        android:layout_weight="1"/> 
      </LinearLayout>
      <LinearLayout 
   		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="2">
	    <!-- 查看答案 -->
	    <Button 
	        android:id="@+id/btnAnswer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnAnswer"
	        android:layout_weight="1"/>
	    
	    <!--无答案 -->
	    <Button 
	        android:id="@+id/btnNoAnswer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnNoAnswer"
	        android:layout_weight="1"/>
	</LinearLayout>
	<!-- 下一题 -->
	<Button 	   
	    android:id="@+id/btnNextSub"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/btnNextSub"/>	
	<TableLayout 
	    android:id="@+id/ly3"
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content">	   
	    <TableRow> 
			<!-- 做对题目数 -->
			<TextView 
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="#000000"
		        android:textSize="20sp"
		        android:text="@string/lbRightCount"/>
			<TextView
		        android:id="@+id/rightSubject"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="#000000"
		        android:textSize="20sp"/>
			
			<!-- 答错题目数 --> 
			<TextView 
			    android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="#000000"
		        android:textSize="20sp"
		        android:text="@string/lbErrorCount"/>
			<TextView
		        android:id="@+id/errorSubject"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textColor="#000000"
		        android:textSize="20sp"/>
		</TableRow>
		
		<TableRow
		    android:id="@+id/trRemainSub"
		    android:visibility="gone">
		    <!-- 题目模式剩余题目 -->
		    <TextView		       	        
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lbRemainSub"
		        android:textColor="#000000"
		        android:layout_weight="1"
		        android:textSize="20sp"/>
			<TextView 
		        android:id="@+id/remainSub"		        
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="20sp"
		        android:layout_weight="2"/>			
		</TableRow>
		
		<TableRow
		    android:id="@+id/trRemainTime"
		    android:visibility="gone">		    
		    <!-- 时间模式倒计时 -->	
		    <TextView		       	        
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lbRemainTime"
		        android:textColor="#000000"
		        android:layout_weight="1"
		        android:textSize="20sp"/>
			<TextView 
		        android:id="@+id/remainTime"		       
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:layout_weight="2"
		        android:textSize="20sp"/>
		</TableRow>
		
		<TableRow>
		    <!-- 耗时 -->
		    <TextView   
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lbWasteTime"
		        android:layout_weight="1"
		        android:textColor="#000000"
		        android:textSize="20sp"/>
			<TextView 
		        android:id="@+id/wasteTime"		        
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"		        
		        android:textColor="#000000"
		        android:textSize="20sp"
		        android:text="0"
		        android:layout_weight="2"/>		    
		</TableRow>
	</TableLayout>	
	
</LinearLayout>